chore(hx-navigation): alignment issue

--- a/src/scss/components/top-navigation/index.scss
+++ b/src/scss/components/top-navigation/index.scss
@@ -20,7 +20,7 @@
   }
 
   a:hover {
-    background-color: #242424;
+    background-color: $gray-900;
   }
 
   #right-menu {
@@ -48,7 +48,7 @@
     }
 
     a:hover {
-      background-color: #242424;
+      background-color: $gray-900;
     }
 
     #topnav-menu {
@@ -59,7 +59,7 @@
       font: inherit;
       font-weight: 500;
       line-height: 1;
-      border-radius: 2px;
+      border-radius: 0.125rem;
       justify-content: center;
       font-size: 0.875rem;
       padding: 1.375rem 2rem;
@@ -67,7 +67,7 @@
     }
 
     #topnav-menu:hover, #eyebrowMenuId hx-menuitem:hover {
-      background-color: #242424 !important;
+      background-color: $gray-900;
       color: #e6dddd !important;
     }
 
@@ -75,8 +75,8 @@
       background-color: $gray-1000;
       min-width: 7rem;
       color: $gray-0;
-      margin-top: -3px;
-      border: 1px solid $gray-1000;
+      margin-top: -0.188rem;
+      border: 0.063rem solid $gray-1000;
       top: 14.5rem;
 
       hx-menuitem {
